fix(mobile): increase logo max-width to 160px and reduce avatar margin on small screens

--- a/apps/website/app/scss/components/_header.scss
+++ b/apps/website/app/scss/components/_header.scss
@@ -92,7 +92,7 @@
 
         img {
           min-width: 0;
-          max-width: 130px;
+          max-width: 160px;
         }
       }
     }
@@ -151,6 +151,10 @@
 
       @include screen-medium {
         display: block;
+      }
+
+      @include screen-small {
+        margin-left: 8px;
       }
     }
   }
